<resources>
    <string name="admob_app_id" translatable="false">ca-app-pub-2116099479139841~1005460378</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-2116099479139841/7700120419</string>

    <string name="app_name">g to mL Converter</string>
    <string name="g" translatable="false">g</string>
    <string name="ml" translatable="false">mL</string>

    <string name="units">1ts = 5mL\n1Ts = 15mL\n1Cup = 200mL</string>
    <string name="egg_alert">※ Eggs are usually 60g per one.</string>
    <string name="err_alert">Please enter the correct value.</string>
    <string name="add_msg">" is successfully added."</string>

    <string name="save">save</string>
</resources>
